작업중 커밋

--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@ IVY_DATABASE_URL="postgresql://postgres.qhwgxmxbstedsexoneut:djfkdnsem%4012@aws-
 IVY_DIRECT_URL="postgresql://postgres.qhwgxmxbstedsexoneut:djfkdnsem%4012@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres"
 NEXT_PUBLIC_IVY_SUPABASE_URL="https://qhwgxmxbstedsexoneut.supabase.co"
 NEXT_PUBLIC_IVY_SUPABASE_PUBLISHABLE_DEFAULT_KEY="sb_publishable_zDL8o_P4cT9MfqFiHyTG4Q_ld9I5_6F"
+# ==============================
+# Supabase classaround
+# ==============================
+CLASSAROUND_DATABASE_URL="postgresql://postgres.ghywxyadwwyeglmyrgvp:LloHI3f9zkPKC6tj@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
+CLASSAROUND_DIRECT_URL="postgresql://postgres.ghywxyadwwyeglmyrgvp:LloHI3f9zkPKC6tj@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres"
+NEXT_PUBLIC_CLASSAROUND_SUPABASE_URL="https://ghywxyadwwyeglmyrgvp.supabase.co"
+NEXT_PUBLIC_CLASSAROUND_SUPABASE_PUBLISHABLE_DEFAULT_KEY="sb_publishable_mhRyIlLevcx_r5rPoPBQkQ_EIqMe2YU"
