--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.24.7",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
