--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
