--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@prisma/client": "6.19.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -28,6 +29,7 @@
     "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.24.7",
@@ -36,12 +38,16 @@
     "next": "16.0.10",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
+    "react-day-picker": "^9.13.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
+    "xx": "^0.0.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
